// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantButton overview 1 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 5px 10px;"
    >
      Cecelia Langosh
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 2 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 5px 10px;"
    >
      Jolie Beahan Sr.
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 3 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 5px 10px;"
    >
      Kane Ortiz
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 4 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 5px 10px;"
    >
      Ronny Spinka
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 5 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); border-radius: 8px; border: 1px solid #000000; display: flex; align-items: center;"
  >
    <div
      data-testid="label"
      style="padding: 5px 10px;"
    >
      Jayce Schaden
    </div>
  </button>
</DocumentFragment>
`;
